--- a/UTH-News/TrangChinh/TinTuc/Html/Tin_Tuc.html
+++ b/UTH-News/TrangChinh/TinTuc/Html/Tin_Tuc.html
@@ -100,7 +100,7 @@
               <h3 class="title-2"><span>Học tập</span></h3>
               <div class="article-list">
                 <div class="article-item">
-                  <a href="#">
+                  <a href="../../../TrangContent/ContentTinTuc/Html/Content_1_Hoc_Tap.html">
                     <div class="article-thumnail">
                       <img src="../Img/tintuc1.png" alt="" />
                     </div>
