--- a/UTH-News/TrangChinh/HoTro/Html/Ho_Tro.html
+++ b/UTH-News/TrangChinh/HoTro/Html/Ho_Tro.html
@@ -81,9 +81,9 @@
         </div>
         <div class="p2__form">
             <div class="form">
-                <h1>CÂU HỎI HỖ TRỢ</h1>
+                <h1>HỖ TRỢ</h1>
                 <form>
-                    <h4 style="color: black;">ĐĂNG KÍ THÔNG TIN HỖ TRỢ</h4>
+                    <!-- <h4 style="color: black;">ĐĂNG KÍ THÔNG TIN HỖ TRỢ</h4>
                     <div class="form__name">
                         <input type="text" value="" id="name" class="form-input">
                         <label for="name" id="lb-name" class="form-label">Họ và tên</label>
@@ -91,8 +91,8 @@
                     <div class="form__mail">
                         <input type="text" value="" id="mail" class="form-input">
                         <label for="mail" id="lb-mail" class="form-label">Email</label>
-                    </div>
-                    <div class="form__phone">
+                    </div> -->
+                    <!-- <div class="form__phone">
                         <input type="text" value="" id="phone" class="form-input">
                         <label for="phone" id="lb-phone" class="form-label">Điện thoại</label>
                     </div>
@@ -106,8 +106,11 @@
                     <div class="form__message">
                         <textarea  style="position: relative;" class="form-input" name="form__messageInput" id="form__messageInput" cols="10" rows="6"></textarea>
                         <label for="form__messageInput" id="lb-form__messageInput" class="form-label">Message</label>
-                    </div>
-                    <button type="submit">Gửi</button>
+                    </div> -->
+                    <button type="submit">
+                      <a href="https://docs.google.com/forms/d/e/1FAIpQLSci2iQUugBo0aL3E0lbFJrSLGOhMd8njrXFMALurHnR4-6DKA/viewform?usp=sf_link">Gửi Thông Tin Tại Đây Qua Google Form</a>
+                  </button>
+                  
                 </form>
             </div>
         </div>
